2 final encabezado responsive

--- a/11_pruebas/7_encabezadoResponsive/index.html
+++ b/11_pruebas/7_encabezadoResponsive/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <div class="logo">
+        <a href="#" class="logo">
             <img src="fenixSinFondo.png" alt="logo de la compañía">
             <h2 class="nombre-empresa">Fenix Company</h2>
         </div>
