creating page with several links

--- a/11_pruebas/8_flexbox/index.html
+++ b/11_pruebas/8_flexbox/index.html
@@ -10,8 +10,8 @@
 <body>
     <nav>
         <a href="#">Inicio</a>
-        <a href="#">Nosotros</a>
-        <a href="#">Contacto</a>
+        <a href="Nosotros.html">Trabaja con Nosotros</a>
+        <a href="Contacto.html" target="_blank">Contacto</a>
     </nav>
 
     <section class="padre">
