--- a/canal-jonmircha/index.html
+++ b/canal-jonmircha/index.html
@@ -11,6 +11,22 @@
 
 <body>
 
+    <div style="width: 600px; position: relative; margin-left: auto; margin-right: auto; left: 0px; top: 260px;">
+        <div class="auto-style1">
+
+            <div id="areaDatos" style="position:absolute;"></div>
+            <!--		
+            <script type="text/javascript" language="javascript">MuestraBuscador();</script>
+            -->
+        </div>
+    </div>
+    <p class="auto-style2">&nbsp;</p>
+    <p class="auto-style2">
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <img alt="" height="198" src="images/imagen_busca.gif" width="198">
+    </p>
+
+
     <!-- probar con iframes -->
     <header>
         <h1>Ejercicios Lógica de Programación con JAVASCRIPT</h1>
