--- a/canal-jonmircha/index.html
+++ b/canal-jonmircha/index.html
@@ -62,6 +62,13 @@
 
         cadenaAArreglo("Lorem ipsum dolor sit amet consectetur adipisicing elit. A maiores minus libero in omnis perspiciatis facere, officia architecto, inventore explicabo velit tempora impedit, distinctio aspernatur mollitia quibusdam sit dicta. Praesentium", "");
 
+        let texto = "hola soy hercules y estoy echado debajo de la computadora"
+
+        const hablar = (texto) => speechSynthesis.
+            speak(new SpeechSynthesisUtterance(texto));
+
+        hablar(texto);
+
     </script>
 
 
