--- a/11_pruebas/login_prueba/login.html
+++ b/11_pruebas/login_prueba/login.html
@@ -37,7 +37,7 @@
                     <div class="div">
                         <i class="fas fa-user"></i>
                         <h5>Usuario</h5>
-                        <input type="text" id="usuario" name="usuario">
+                        <input type="text" class="campo" id="usuario" name="usuario">
                     </div>
                 </div>
 
@@ -47,7 +47,7 @@
                     </div>
                     <div class="div">
                         <h5>Contraseña</h5>
-                        <input type="password" id="input" name="password">
+                        <input type="password" class="campo" id="input" name="password">
                     </div>
                 </div>
 
