upload readme with sreenshot

--- a/11_pruebas/login_prueba/login.html
+++ b/11_pruebas/login_prueba/login.html
@@ -23,79 +23,42 @@
 <body>
 
     <!-- <img class="nave" src="img/banner.jpg"> -->
-    <div class="container">
-        <div class="img">
+    <div class="login-content">
 
-        </div>
-        <div class="login-content">
-            <form action="" method="post">
-                <img src="img/avatar.svg">
-                <h1 class="title">BIENVENIDO</h1>
+        <img class="login-content__img" src="img/avatar.svg">
+        <h1 class="login-content__title">BIENVENIDO</h1>
 
+        <form class="login-content__form" action="" method="post">
 
-                <div class="form__group form__div">
-                    <div class="div">
-                        <i class="fas fa-user"></i>
-                        <h5>Usuario</h5>
-                        <input type="text" class="campo" id="usuario" name="usuario">
-                    </div>
+            <div class="login-content__form__item">
+                <div class="login-content__form__item__group">
+                    <i class="fas fa-user"></i>
+                    <h5 class="login-content__form__item__group__name">Usuario</h5>
                 </div>
 
-                <div class="form__group form__div">
-                    <div class="i">
-                        <i class="fas fa-lock"></i>
-                    </div>
-                    <div class="div">
-                        <h5>Contraseña</h5>
-                        <input type="password" class="campo" id="input" name="password">
-                    </div>
+                <input class="login-content__form__item__input" type="text" id="usuario" name="usuario">
+            </div>
+
+            <div class="login-content__form__item">
+                <div class="login-content__form__item__group">
+                    <i class="fas fa-lock"></i>
+                    <h5 class="login-content__form__item__group__name">Contraseña</h5>
                 </div>
 
-                <div class="form__group form__div">
-                    <div class="fas fa-eye verPassWord" onclick="vista()" id="verPassword"></div>
-                </div>
+                <input class="login-content__form__item__input" type="password" id="verPassword" name="password">
+            </div>
 
-                <div class="form__group__enlace">
-                    <a href="#" class="enlace">Olvidé mi contraseña</a>
-                </div>
-                <!-- <input type="submit" class="form__group" name=" btnIngresar" value="INICIAR SESION"> -->
-                <div class="form__group">
-                    <button type="submit">INICIAR SESION</button>
-                </div>
-            </form>
-        </div>
+            <button class="login-content__form__button-login" type="submit">
+                INICIAR SESION
+            </button>
 
+    </div>
+    </form>
     </div>
 
 
-    <!-- <div class="container">
-        <h1>Acceso</h1>
-        <form action="">
-            <div class="form__group form__div">
-                <span><i class="fa-solid fa-envelope"></i></span>
-                <input class="campo" type="email" placeholder="Direccion de correo electronico">
-            </div>
-            <div class="form__group form__div">
-                <span><i class="fa-solid fa-lock"></i></span>
-                <input class="campo" type="password" placeholder="Contraseña">
-            </div>
-            <div class="form__group">
-                <button type="submit">Acceso</button>
-            </div>
-            <div class="form__group__enlace">
-                <a class="enlace" href="#">¿Olvidaste tu contraseña?</a>
-            </div>
-        </form>
-        <hr>
-        <p>Inicie sesión con su cuenta de redes sociales</p>
-        <div class="div__group">
-            <a class="redes" href="#"><i class="fa-brands fa-twitter"></i></a>
-            <a class="redes" href="#"><i class="fa-brands fa-facebook"></i></a>
-        </div>
-    </div> -->
 
-
-    <script src="js/main.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
 
 </html>
